<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@+id/linearLayout2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/it_share_device_h"
    tools:layout_editor_absoluteY="73dp">

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Status"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintStart_toStartOf="@+id/name_txt"
        app:layout_constraintTop_toBottomOf="@+id/name_txt" />

    <Button
        android:id="@+id/addButton"
        style="@style/Tio.Material.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/removeButton"
        style="@style/Tio.Material.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/remove"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/mute_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:contentDescription="@string/mute"
        android:src="@drawable/selector_mute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/status_txt"
        app:layout_constraintTop_toBottomOf="@+id/status_txt"
        app:srcCompat="@drawable/selector_mute" />

    <SeekBar
        android:id="@+id/volume_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/mute_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mute_btn"
        app:layout_constraintTop_toTopOf="@+id/mute_btn" />

</android.support.constraint.ConstraintLayout>
